added flexbox navbar

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     <div class="bg-image">
         <header>
-        <nav class="navBar">
-            <ul>
-                <li><a href="#">INICIO</a></li>
-                <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
-                <li><a href="./pages/contacto.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-    </header>
+            <nav>
+                <ul class="navBar">
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="./pages/actividades.html">ACTIVIDADES</a></li>
+                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </header>
     <main>
         <div class="mainText">
             <div class="boxText1"></div>
