--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,15 +8,15 @@
     <title>Mindsport GYM</title>
 </head>
 <body>
-        <header>
-            <nav class="navBar">
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="./actividades.html">ACTIVIDADES</a></li>
-                    <li><a href="#">CONTACTO</a></li>
-                </ul>
-            </nav>
-        </header>
+    <header>
+        <nav>
+            <ul class="navBar">
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="./actividades.html">ACTIVIDADES</a></li>
+                <li><a href="#">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
         <main>
             <section>
                 <div class="contactanosDiv"></div>
