--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-            <nav class="navBar">
-                <ul>
-                    <li><a href="../index.html">INICIO</a></li>
-                    <li><a href="#">ACTIVIDADES</a></li>
-                    <li><a href="./contacto.html">CONTACTO</a></li>
-                </ul>
-                </nav>
-        </header>
+        <nav>
+            <ul class="navBar">
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="#">ACTIVIDADES</a></li>
+                <li><a href="./contacto.html">CONTACTO</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <div class="actContainer">
             <div class="boxAct"></div>
